fix navbar menu on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -246,3 +246,11 @@ a:hover {
 .barcode {
   max-width: 100%;
 }
+
+@media (max-width: 991px) {
+  .navbar {
+    overflow: auto;
+    max-height: 85vh;
+    align-items: flex-start;
+  }
+}
